# ed318-pydantic

./: .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  hello.py  pyproject.toml
.github/workflows/: latest-changes.yaml  release.yaml  test.yaml
src/ed318_pydantic/: geometries.py  models.py  types.py  util.py
src/ed_318/: geometries.py  models.py  types.py  util.py
test/: smoke_test.py  test_coercion.py  test_enaire_dataset.py  test_external_datasets.py  test_official_examples.py  test_util.py
test/data/: Example_Collection.json  Example_GeoZone_2_Layers.json  Example_GeoZone_Circle.json  Example_GeoZone_with_extension.json  InvalidExample_GeoZone_2_Layers.json  PartialExample_GeoZoneProperties.json  PartialExample_TimePeriod.json  PartialExample_ZoneAuthority.json  PartialExample_featureGeoJSON.json
test/data/ALTER/: UGZ_ED-318.json
test/data/ENAIRE/features/: 0006-4.json  0059-4.json  GCPU0.json  _90.json
test/data/enaire/features/: 0006-4.fixed.json
