[project]
name = "ed318-pydantic"
version = "0.2.0"
description = "ED-318 Pydantic Models"
readme = "README.md"
authors = [
    { name="Lasse Fröhner", email="lasse@starcopter.com" },
]
requires-python = ">=3.13"
dependencies = [
    "geojson-pydantic>=1.2.0",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:GeometryCollection should not be used for homogeneous collections:UserWarning:geojson_pydantic.geometries",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-packages = true
